# mxmda

./: .gitignore  README  config.yml.sample  pyproject.toml  requirements.txt
mxmda/: __main__.py  app.py  errors.py  matrix.py  utils.py
systemd/: README  mxmda.service
